fixed spacing on header and footer

--- a/themes/yoga_outreach/sass/_header.scss
+++ b/themes/yoga_outreach/sass/_header.scss
@@ -177,7 +177,7 @@ p{
     width: 90px;
     padding: 0.5rem 0.8rem;
     order: 1;
-    margin-left: 80%;
+    margin-left: 63%;
     @include desktop{
       margin-left:0;
     }
