--- a/themes/yoga_outreach/style.css
+++ b/themes/yoga_outreach/style.css
@@ -812,7 +812,7 @@ p {
     padding: 0.5rem 0.8rem;
     -ms-flex-order: 1;
         order: 1;
-    margin-left: 80%; }
+    margin-left: 63%; }
     @media (min-width: 720px) {
       #site-navigation .logo-image {
         margin-left: 0; } }
@@ -825,7 +825,6 @@ footer {
   -ms-flex-pack: center;
       justify-content: center;
   text-transform: uppercase;
-  max-width: 1240px;
   margin: 0 auto; }
   footer form {
     width: 100%;
@@ -893,9 +892,11 @@ footer {
           align-items: center;
       width: 100%;
       -ms-flex-pack: justify;
-          justify-content: space-between; } }
+          justify-content: space-between;
+      max-width: 1020px; } }
   footer .siteinfo-text {
-    margin-top: 50px; }
+    margin-top: 50px;
+    text-align: center; }
     @media (min-width: 720px) {
       footer .siteinfo-text {
         display: -ms-inline-flexbox;
@@ -2824,7 +2825,6 @@ object {
   padding: 0; }
 
 .home {
-  max-width: 1240px;
   margin: 0 auto;
   text-align: center;
   font-family: raleway;
@@ -2939,7 +2939,8 @@ object {
   @media (min-width: 720px) {
     .home .program-list {
       display: -ms-inline-flexbox;
-      display: inline-flex; } }
+      display: inline-flex;
+      max-width: 1020px; } }
   .home .program-list .programlist-text {
     padding: 0 8%; }
     .home .program-list .programlist-text h4 {
@@ -3004,11 +3005,13 @@ object {
     .home .get-involved h2 {
       padding: 1rem; }
     @media (min-width: 720px) {
-      .home .get-involved .involedWarp {
+      .home .get-involved .involvedWrap {
         display: -ms-flexbox;
         display: flex;
         -ms-flex-pack: center;
-            justify-content: center; } }
+            justify-content: center;
+        max-width: 1020px;
+        margin: 0 auto; } }
     .home .get-involved .involvedimage_one {
       width: 23.8%;
       height: 30%;
